resize - fix 326-280 size

--- a/googlewebdesigner/326-280/326-280.html
+++ b/googlewebdesigner/326-280/326-280.html
@@ -145,15 +145,15 @@
       position: absolute;
       width: 92px;
       height: 107px;
-      left: 187px;
       top: -130px;
+      left: 210px;
     }
     .gwd-image-1s2a {
       position: absolute;
       width: 108px;
       height: 107px;
-      left: 70px;
       top: -130px;
+      left: 95px;
     }
     .gwd-image-10us {
       position: absolute;
@@ -172,26 +172,28 @@
     .gwd-page-1r2a {
       background-image: none;
       background-color: rgb(232, 231, 233);
+      width: 326px;
+      height: 280px;
     }
     @keyframes gwd-gen-1bmdgwdanimation_gwd-keyframes {
       0% {
         left: 0px;
-        top: 279px;
+        top: 289px;
         animation-timing-function: ease-in-out;
       }
       20% {
         left: 0px;
-        top: 179px;
+        top: 200px;
         animation-timing-function: linear;
       }
       80% {
         left: 0px;
-        top: 179px;
+        top: 200px;
         animation-timing-function: ease-in-out;
       }
       100% {
-        left: -302px;
-        top: 179px;
+        left: -331px;
+        top: 200px;
         animation-timing-function: linear;
       }
     }
@@ -205,12 +207,12 @@
         animation-timing-function: ease-in-out;
       }
       20% {
-        left: 131px;
+        left: 154px;
         top: 84px;
         animation-timing-function: linear;
       }
       80% {
-        left: 131px;
+        left: 154px;
         top: 84px;
         animation-timing-function: ease-in-out;
       }
@@ -226,17 +228,17 @@
     @keyframes gwd-gen-12p2gwdanimation_gwd-keyframes {
       0% {
         top: -130px;
-        left: 70px;
+        left: 95px;
         animation-timing-function: ease-in-out;
       }
       5.8824% {
         top: -3px;
-        left: 70px;
+        left: 95px;
         animation-timing-function: linear;
       }
       94.1176% {
         top: -3px;
-        left: 70px;
+        left: 95px;
         animation-timing-function: ease-in-out;
       }
       100% {
@@ -251,17 +253,17 @@
     @keyframes gwd-gen-10yjgwdanimation_gwd-keyframes {
       0% {
         top: -130px;
-        left: 187px;
+        left: 210px;
         animation-timing-function: ease-in-out;
       }
       3.6364% {
         top: -3px;
-        left: 187px;
+        left: 210px;
         animation-timing-function: linear;
       }
       95.4545% {
         top: -3px;
-        left: 187px;
+        left: 210px;
         animation-timing-function: ease-in-out;
       }
       100% {
@@ -275,7 +277,7 @@
     }
     @keyframes gwd-gen-ocv0gwdanimation_gwd-keyframes {
       0% {
-        left: 302px;
+        left: 333px;
         animation-timing-function: ease-in-out;
       }
       20% {
@@ -287,7 +289,7 @@
         animation-timing-function: ease-in-out;
       }
       100% {
-        left: -302px;
+        left: -333px;
         animation-timing-function: linear;
       }
     }
@@ -296,7 +298,7 @@
     }
     @keyframes gwd-gen-vgnpgwdanimation_gwd-keyframes {
       0% {
-        left: 302px;
+        left: 333px;
         animation-timing-function: ease-in-out;
       }
       20% {
@@ -308,7 +310,7 @@
         animation-timing-function: ease-in-out;
       }
       100% {
-        left: -302px;
+        left: -333px;
         animation-timing-function: linear;
       }
     }
@@ -317,23 +319,23 @@
     }
     @keyframes gwd-gen-1wpbgwdanimation_gwd-keyframes {
       0% {
-        left: 302px;
-        top: 179px;
+        left: 333px;
+        top: 200px;
         animation-timing-function: ease-in-out;
       }
       20% {
         left: 0px;
-        top: 179px;
+        top: 200px;
         animation-timing-function: linear;
       }
       80% {
         left: 0px;
-        top: 179px;
+        top: 200px;
         animation-timing-function: ease-in-out;
       }
       100% {
         left: 0px;
-        top: 279px;
+        top: 300px;
         animation-timing-function: linear;
       }
     }
@@ -347,23 +349,23 @@
       position: absolute;
       width: 124px;
       height: 107px;
-      left: 55px;
       top: -130px;
+      left: 77px;
     }
     @keyframes gwd-gen-5n2agwdanimation_gwd-keyframes {
       0% {
         top: -130px;
-        left: 55px;
+        left: 77px;
         animation-timing-function: ease-in-out;
       }
       18.5185% {
         top: -3px;
-        left: 55px;
+        left: 77px;
         animation-timing-function: linear;
       }
       81.4815% {
         top: -3px;
-        left: 55px;
+        left: 77px;
         animation-timing-function: ease-in-out;
       }
       100% {
@@ -383,24 +385,24 @@
       top: 18px;
       opacity: 0;
       transform-style: preserve-3d;
-      transform: translate3d(0px, 36px, 0px);
+      transform: translate3d(22px, 36px, 0px);
     }
     @keyframes gwd-gen-151ygwdanimation_gwd-keyframes {
       0% {
         opacity: 0;
-        transform: translate3d(0px, 36px, 0px);
+        transform: translate3d(22px, 36px, 0px);
         left: 88px;
         animation-timing-function: ease-out;
       }
       31.8182% {
         opacity: 1;
-        transform: translate3d(-1px, 68px, 0px);
+        transform: translate3d(22px, 68px, 0px);
         left: 88px;
         animation-timing-function: linear;
       }
       77.2727% {
         opacity: 1;
-        transform: translate3d(-1px, 68px, 0px);
+        transform: translate3d(22px, 68px, 0px);
         left: 88px;
         animation-timing-function: ease-in-out;
       }
@@ -416,44 +418,49 @@
     }
     .gwd-image-w4hj {
       position: absolute;
-      width: 300px;
-      height: 57px;
       left: 0px;
-      top: 277px;
+      top: 300px;
+      width: 326px;
+      height: 50px;
     }
     .gwd-image-e5zp {
       left: 0px;
-      top: 279px;
+      width: 326px;
+      height: 50px;
+      top: 289px;
     }
     @keyframes gwd-gen-jlktgwdanimation_gwd-keyframes {
       0% {
-        top: 277px;
+        top: 300px;
         left: 0px;
-        animation-timing-function: linear;
-      }
-      74.5455% {
-        top: 277px;
-        left: 0px;
+        width: 326px;
+        height: 50px;
         animation-timing-function: ease-in-out;
       }
-      79.0909% {
-        top: 179px;
+      17.8571% {
+        top: 200px;
         left: 0px;
+        width: 326px;
+        height: 50px;
         animation-timing-function: linear;
       }
-      95.4545% {
-        top: 179px;
+      82.1429% {
+        top: 200px;
         left: 0px;
+        width: 326px;
+        height: 50px;
         animation-timing-function: ease-in-out;
       }
       100% {
-        top: 179px;
-        left: -302px;
+        top: 200px;
+        left: -333px;
+        width: 326px;
+        height: 50px;
         animation-timing-function: linear;
       }
     }
     #page1.gwd-play-animation .gwd-gen-jlktgwdanimation {
-      animation: 11s linear 0s 1 normal forwards running gwd-gen-jlktgwdanimation_gwd-keyframes;
+      animation: 2.8s linear 8.2s 1 normal forwards running gwd-gen-jlktgwdanimation_gwd-keyframes;
     }
     .gwd-image-5fta {
       position: absolute;
@@ -477,19 +484,19 @@
         animation-timing-function: linear;
       }
       78.5714% {
-        transform: translate3d(0px, 0px, 0px);
+        transform: translate3d(13px, 0px, 0px);
         animation-timing-function: cubic-bezier(0.42, 0, 0.495, 1.195);
       }
       84.2857% {
-        transform: translate3d(0px, 204px, 0px);
+        transform: translate3d(13px, 219px, 0px);
         animation-timing-function: linear;
       }
       95.7143% {
-        transform: translate3d(0px, 204px, 0px);
+        transform: translate3d(13px, 219px, 0px);
         animation-timing-function: ease-in-out;
       }
       100% {
-        transform: translate3d(0px, 404px, 0px);
+        transform: translate3d(13px, 428px, 0px);
         animation-timing-function: linear;
       }
     }
@@ -503,23 +510,23 @@
         animation-timing-function: linear;
       }
       81.1765% {
-        top: -125px;
-        left: 57px;
+        top: -119px;
+        left: 70px;
         animation-timing-function: ease-in-out;
       }
       85.2941% {
         top: 49px;
-        left: 57px;
+        left: 70px;
         animation-timing-function: linear;
       }
       97.0588% {
         top: 49px;
-        left: 57px;
+        left: 70px;
         animation-timing-function: ease-in;
       }
       100% {
         top: -193px;
-        left: 57px;
+        left: 70px;
         animation-timing-function: linear;
       }
     }
@@ -541,19 +548,19 @@
         animation-timing-function: linear;
       }
       84.1176% {
-        transform: translate3d(0px, 0px, 0px);
+        transform: translate3d(13px, 0px, 0px);
         animation-timing-function: cubic-bezier(0, 0, 0.525, 1.095);
       }
       88.2353% {
-        transform: translate3d(0px, -150px, 0px);
+        transform: translate3d(13px, -150px, 0px);
         animation-timing-function: linear;
       }
       97.0588% {
-        transform: translate3d(0px, -150px, 0px);
+        transform: translate3d(13px, -150px, 0px);
         animation-timing-function: ease-in;
       }
       100% {
-        transform: translate3d(0px, -392px, 0px);
+        transform: translate3d(13px, -392px, 0px);
         animation-timing-function: linear;
       }
     }
@@ -579,37 +586,37 @@
       }
       84.1176% {
         opacity: 1;
-        transform: translate3d(0px, 0px, 0px);
+        transform: translate3d(13px, 0px, 0px);
         top: -46px;
         animation-timing-function: linear;
       }
       85.2941% {
         opacity: 0;
-        transform: translate3d(0px, 0px, 0px);
+        transform: translate3d(13px, 0px, 0px);
         top: -45px;
         animation-timing-function: linear;
       }
       88.2353% {
         opacity: 0;
-        transform: translate3d(0px, 177px, 0px);
+        transform: translate3d(13px, 177px, 0px);
         top: -45px;
         animation-timing-function: cubic-bezier(0, 0, 0.525, 1.105);
       }
       91.1765% {
         opacity: 1;
-        transform: translate3d(0px, 207px, 0px);
+        transform: translate3d(13px, 207px, 0px);
         top: -45px;
         animation-timing-function: linear;
       }
       97.0588% {
         opacity: 1;
-        transform: translate3d(0px, 207px, 0px);
+        transform: translate3d(13px, 207px, 0px);
         top: -45px;
         animation-timing-function: ease-in;
       }
       100% {
         opacity: 1;
-        transform: translate3d(0px, -35px, 0px);
+        transform: translate3d(13px, -35px, 0px);
         top: -45px;
         animation-timing-function: linear;
       }
@@ -624,27 +631,27 @@
       left: 105px;
       top: 272px;
       transform-style: preserve-3d;
-      transform: translate3d(0px, 0px, 0px);
+      transform: translate3d(13px, 20px, 0px);
     }
     @keyframes gwd-gen-1kbwgwdanimation_gwd-keyframes {
       0% {
-        transform: translate3d(0px, 0px, 0px);
+        transform: translate3d(13px, 20px, 0px);
         animation-timing-function: linear;
       }
       89.8396% {
-        transform: translate3d(0px, 0px, 0px);
+        transform: translate3d(13px, 20px, 0px);
         animation-timing-function: ease-out;
       }
       93.5829% {
-        transform: translate3d(0px, -192px, 0px);
+        transform: translate3d(13px, -177px, 0px);
         animation-timing-function: linear;
       }
       97.861% {
-        transform: translate3d(0px, -192px, 0px);
+        transform: translate3d(13px, -177px, 0px);
         animation-timing-function: linear;
       }
       100% {
-        transform: translate3d(-46px, -192px, 0px);
+        transform: translate3d(-46px, -177px, 0px);
         animation-timing-function: linear;
       }
     }
@@ -688,17 +695,17 @@
       }
       97.2973% {
         opacity: 0;
-        transform: translate3d(0px, 0px, 0px);
+        transform: translate3d(0px, 15px, 0px);
         animation-timing-function: linear;
       }
       98.3784% {
         opacity: 0;
-        transform: translate3d(-135px, 0px, 0px);
+        transform: translate3d(-135px, 15px, 0px);
         animation-timing-function: linear;
       }
       100% {
         opacity: 1;
-        transform: translate3d(-135px, 0px, 0px);
+        transform: translate3d(-135px, 15px, 0px);
         animation-timing-function: linear;
       }
     }
@@ -713,25 +720,25 @@
         animation-timing-function: linear;
       }
       96.2567% {
-        transform: translate3d(0px, 0px, 0px);
+        transform: translate3d(0px, 15px, 0px);
         opacity: 1;
         height: 70px;
         animation-timing-function: linear;
       }
       96.7914% {
-        transform: translate3d(-137px, 0px, 0px);
+        transform: translate3d(-137px, 15px, 0px);
         opacity: 0;
         height: 70px;
         animation-timing-function: linear;
       }
       97.3262% {
-        transform: translate3d(-137px, 0px, 0px);
+        transform: translate3d(-137px, 15px, 0px);
         opacity: 1;
         height: 70px;
         animation-timing-function: linear;
       }
       100% {
-        transform: translate3d(-250px, 10px, 0px);
+        transform: translate3d(-250px, 25px, 0px);
         opacity: 1;
         height: 50px;
         animation-timing-function: linear;
@@ -744,8 +751,8 @@
       position: absolute;
       left: 0px;
       top: 0px;
-      width: 300px;
-      height: 250px;
+      width: 326px;
+      height: 280px;
     }
     @keyframes gwd-gen-1w7tgwdanimation_gwd-keyframes {
       0% {
@@ -754,12 +761,12 @@
         animation-timing-function: ease-in-out;
       }
       20% {
-        left: 131px;
+        left: 154px;
         top: 84px;
         animation-timing-function: linear;
       }
       80% {
-        left: 131px;
+        left: 154px;
         top: 84px;
         animation-timing-function: ease-in-out;
       }
@@ -779,12 +786,12 @@
         animation-timing-function: ease-in-out;
       }
       20% {
-        left: 131px;
+        left: 154px;
         top: 84px;
         animation-timing-function: linear;
       }
       80% {
-        left: 131px;
+        left: 154px;
         top: 84px;
         animation-timing-function: ease-in-out;
       }
@@ -804,12 +811,12 @@
         animation-timing-function: ease-in-out;
       }
       20% {
-        left: 131px;
+        left: 154px;
         top: 84px;
         animation-timing-function: linear;
       }
       80% {
-        left: 131px;
+        left: 154px;
         top: 84px;
         animation-timing-function: ease-in-out;
       }
@@ -821,6 +828,28 @@
     }
     #page1.gwd-play-animation .gwd-gen-1lg7gwdanimation {
       animation: 2.5s linear 6s 1 normal forwards running gwd-gen-1lg7gwdanimation_gwd-keyframes;
+    }
+    .gwd-div-1mwo {
+      width: 326px;
+      height: 280px;
+    }
+    .gwd-image-1049 {
+      top: 200px;
+      height: 50px;
+      width: 326px;
+      left: 333px;
+    }
+    .gwd-image-1niw {
+      left: 333px;
+      top: 200px;
+      width: 326px;
+      height: 50px;
+    }
+    .gwd-image-ndlj {
+      left: 333px;
+      top: 200px;
+      width: 326px;
+      height: 50px;
     }
   </style>
   <script data-source="googbase_min.js" data-version="4" data-exports-type="googbase" src="googbase_min.js"></script>
@@ -866,19 +895,19 @@
       <gwd-metric-event source="gwd-taparea_1" event="tapareaexit" metric="" exit="Exit"></gwd-metric-event>
     </gwd-metric-configuration>
     <gwd-pagedeck class="gwd-page-container" id="pagedeck">
-      <gwd-page id="page1" class="gwd-page-wrapper gwd-page-size gwd-lightbox gwd-page-1r2a" data-gwd-width="300px" data-gwd-height="250px" data-gwd-animation-labels="start,0">
-        <div class="gwd-page-content gwd-page-size">
+      <gwd-page id="page1" class="gwd-page-wrapper gwd-page-size gwd-lightbox gwd-page-1r2a" data-gwd-width="326px" data-gwd-height="280px" data-gwd-animation-labels="start,0">
+        <div class="gwd-page-content gwd-page-size gwd-div-1mwo">
           <gwd-image id="bigtext1" source="assets/bigtext1.png" scaling="stretch" class="gwd-image-1czz gwd-gen-10yjgwdanimation"></gwd-image>
           <gwd-image id="bigtext2" source="assets/bigtext2.png" scaling="stretch" class="gwd-image-1s2a gwd-gen-12p2gwdanimation"></gwd-image>
           <gwd-image id="bigtext3" source="assets/bigtext3.png" scaling="stretch" class="gwd-image-1931 gwd-gen-5n2agwdanimation"></gwd-image>
           <gwd-image id="header1" source="assets/header1.png" scaling="none" class="gwd-image-10us gwd-gen-1tr4gwdanimation gwd-image-12ei" alignment="center"></gwd-image>
           <gwd-image id="header1d" source="assets/header1d.png" scaling="none" class="gwd-image-1jep gwd-gen-1bmdgwdanimation gwd-image-e5zp"></gwd-image>
           <gwd-image id="header2" source="assets/header2.png" scaling="none" class="gwd-image-10us gwd-image-12ei gwd-gen-1w7tgwdanimation" alignment="center"></gwd-image>
-          <gwd-image id="header2d" source="assets/header2d.png" scaling="none" class="gwd-image-1jep gwd-gen-ocv0gwdanimation"></gwd-image>
+          <gwd-image id="header2d" source="assets/header2d.png" scaling="none" class="gwd-image-1jep gwd-gen-ocv0gwdanimation gwd-image-1049"></gwd-image>
           <gwd-image id="header3" source="assets/header3.png" scaling="none" class="gwd-image-10us gwd-image-12ei gwd-gen-1tzxgwdanimation" alignment="center"></gwd-image>
-          <gwd-image id="header3d" source="assets/header3d.png" scaling="none" class="gwd-image-1jep gwd-gen-vgnpgwdanimation"></gwd-image>
+          <gwd-image id="header3d" source="assets/header3d.png" scaling="none" class="gwd-image-1jep gwd-gen-vgnpgwdanimation gwd-image-1niw"></gwd-image>
           <gwd-image id="header4" source="assets/header4.png" scaling="none" class="gwd-image-10us gwd-image-12ei gwd-gen-1lg7gwdanimation" alignment="center"></gwd-image>
-          <gwd-image id="header4d" source="assets/header4d.png" scaling="none" class="gwd-image-1jep gwd-gen-1wpbgwdanimation"></gwd-image>
+          <gwd-image id="header4d" source="assets/header4d.png" scaling="none" class="gwd-image-1jep gwd-gen-1wpbgwdanimation gwd-image-ndlj"></gwd-image>
           <gwd-image id="long-text" source="assets/long-text.png" scaling="stretch" class="gwd-image-wz8d gwd-gen-151ygwdanimation"></gwd-image>
           <gwd-image id="header5d" source="assets/header5d.png" scaling="stretch" class="gwd-image-w4hj gwd-gen-jlktgwdanimation"></gwd-image>
           <gwd-image id="roshn-logo" source="assets/roshn-logo.png" scaling="stretch" class="gwd-image-5fta gwd-gen-mun8gwdanimation"></gwd-image>
@@ -888,8 +917,8 @@
           <gwd-image id="PIF-text" source="assets/PIF-text.png" scaling="stretch" class="gwd-image-wj18 gwd-gen-3ibcgwdanimation"></gwd-image>
           <div class="gwd-div-r7pr gwd-gen-1rhogwdanimation" id="PIF-line"></div>
           <gwd-image id="PIF-logo" source="assets/PIF-logo.png" scaling="stretch" class="gwd-image-als6 gwd-gen-1kbwgwdanimation"></gwd-image>
-          <div class="gwd-animation-event event-1-animation" data-event-name="event-1" data-event-time="20000"></div>
           <gwd-taparea id="gwd-taparea_1" class="gwd-taparea-1v94" data-gwd-tl-hidden="" data-gwd-tl-locked=""></gwd-taparea>
+          <div class="gwd-animation-event event-1-animation" data-event-name="event-1" data-event-time="21000"></div>
         </div>
       </gwd-page>
     </gwd-pagedeck>
