--- a/index.html
+++ b/index.html
@@ -23,27 +23,25 @@
       <a class="font-weight-bold" href="./zip/index.html">Download</a>
     </div>
 
-
     <div class="loading mt-2 mx-auto embed-responsive" style="width: 300px;height: 250px;">
       <iframe src="./publish/300-250/index.html" class="embed-responsive-item" frameborder="0"></iframe>
     </div>
-
 
     <div class="loading mt-2 mx-auto embed-responsive" style="width: 326px;height: 280px;">
       <iframe src="./publish/326-280/index.html" class="embed-responsive-item" frameborder="0"></iframe>
     </div>
 
+    <div class="loading mt-2 mx-auto embed-responsive" style="width: 468px;height: 60px;">
+      <iframe src="./publish/468-60/index.html" class="embed-responsive-item" frameborder="0"></iframe>
+    </div>
 
     <div class="loading mt-2 mx-auto embed-responsive" style="width: 728px;height: 90px;">
       <iframe src="./publish/728-90/index.html" class="embed-responsive-item" frameborder="0"></iframe>
     </div>
 
-
     <div class="loading mt-2 mx-auto embed-responsive" style="width: 970px;height: 90px;">
       <iframe src="./publish/970-90/index.html" class="embed-responsive-item" frameborder="0"></iframe>
     </div>
-
-
   </div>
 </body>
 
