--- a/zip/index.html
+++ b/zip/index.html
@@ -72,7 +72,7 @@
             <a class="nav-link disabled" href="./320-50.zip">320-50</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="./468-60.zip">468-60</a>
+            <a class="nav-link" href="./468-60.zip">468-60</a>
           </li>
         </ul>
       </div>
