--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
   <div class="container-fluid py-5">
-    <div class="mt-5 text-center">
+    <div class="text-center">
       <a class="font-weight-bold" href="./zip/index.html">Download</a>
     </div>
 
