--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
       <iframe src="./publish/326-280/index.html" class="embed-responsive-item" frameborder="0"></iframe>
     </div>
 
+    <div class="loading mt-2 mx-auto embed-responsive" style="width: 320px;height: 50px;">
+      <iframe src="./publish/320-50/index.html" class="embed-responsive-item" frameborder="0"></iframe>
+    </div>
+
     <div class="loading mt-2 mx-auto embed-responsive" style="width: 468px;height: 60px;">
       <iframe src="./publish/468-60/index.html" class="embed-responsive-item" frameborder="0"></iframe>
     </div>
