--- a/zip/index.html
+++ b/zip/index.html
@@ -69,7 +69,7 @@
       <div class="card">
         <ul class="card-body nav flex-column text-center">
           <li class="nav-item">
-            <a class="nav-link disabled" href="./320-50.zip">320-50</a>
+            <a class="nav-link" href="./320-50.zip">320-50</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./468-60.zip">468-60</a>
