update index.html 320-100

--- a/zip/index.html
+++ b/zip/index.html
@@ -62,7 +62,7 @@
       <div class="card">
         <ul class="card-body nav flex-column text-center">
           <li class="nav-item">
-            <a class="nav-link disabled" href="./320-100.zip">320-100</a>
+            <a class="nav-link" href="./320-100.zip">320-100</a>
           </li>
         </ul>
       </div>
