--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
       <a class="font-weight-bold" href="./zip/index.html">Download</a>
     </div>
 
+
+
+
+    <div class="loading mt-2 mx-auto embed-responsive" style="width: 300px;height: 100px;">
+      <iframe src="./publish/300-100/index.html" class="embed-responsive-item" frameborder="0"></iframe>
+    </div>
+
     <div class="loading mt-2 mx-auto embed-responsive" style="width: 300px;height: 250px;">
       <iframe src="./publish/300-250/index.html" class="embed-responsive-item" frameborder="0"></iframe>
     </div>
