--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
 
 
 
+    <div class="loading mt-2 mx-auto embed-responsive" style="width: 200px;height: 200px;">
+      <iframe src="./publish/200-200/index.html" class="embed-responsive-item" frameborder="0"></iframe>
+    </div>
+
+    <div class="loading mt-2 mx-auto embed-responsive" style="width: 250px;height: 250px;">
+      <iframe src="./publish/250-250/index.html" class="embed-responsive-item" frameborder="0"></iframe>
+    </div>
 
     <div class="loading mt-2 mx-auto embed-responsive" style="width: 320px;height: 100px;">
       <iframe src="./publish/320-100/index.html" class="embed-responsive-item" frameborder="0"></iframe>
