--- a/zip/index.html
+++ b/zip/index.html
@@ -45,10 +45,10 @@
       <div class="card">
         <ul class="card-body nav flex-column text-center">
           <li class="nav-item">
-            <a class="nav-link disabled" href="./200-200.zip">200-200</a>
+            <a class="nav-link" href="./200-200.zip">200-200</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="./250-250.zip">250-250</a>
+            <a class="nav-link" href="./250-250.zip">250-250</a>
           </li>
         </ul>
       </div>
