--- a/googlewebdesigner/200-200/160-600/160-600.html
+++ b/googlewebdesigner/200-200/160-600/160-600.html
@@ -105,6 +105,7 @@
     .gwd-div-11y4 {
       background-color: rgb(77, 97, 118);
       transform: translate3d(0px, 0px, 0px);
+      transform-style: preserve-3d;
     }
     .gwd-div-rqgl {
       transform-style: preserve-3d;
@@ -131,15 +132,15 @@
         opacity: 0;
         animation-timing-function: ease-out;
       }
-      5.7377% {
+      5.8333% {
         transform: translate3d(0px, 0px, 0px);
         opacity: 1;
         animation-timing-function: linear;
       }
-      94.2623% {
+      95.8333% {
         transform: translate3d(0px, 0px, 0px);
         opacity: 1;
-        animation-timing-function: linear;
+        animation-timing-function: ease-in-out;
       }
       100% {
         transform: translate3d(0px, 50px, 0px);
@@ -148,7 +149,7 @@
       }
     }
     #page1.gwd-play-animation .gwd-gen-40fygwdanimation {
-      animation: 12.2s linear 0.5s 1 normal forwards running gwd-gen-40fygwdanimation_gwd-keyframes;
+      animation: 12s linear 0.5s 1 normal forwards running gwd-gen-40fygwdanimation_gwd-keyframes;
     }
     @keyframes gwd-gen-1l1mgwdanimation_gwd-keyframes {
       0% {
@@ -343,7 +344,7 @@
       96% {
         transform: translate3d(0px, 0px, 0px);
         opacity: 0;
-        animation-timing-function: linear;
+        animation-timing-function: ease-in-out;
       }
       100% {
         transform: translate3d(0px, -200px, 0px);
@@ -358,7 +359,7 @@
       0% {
         transform: translate3d(0px, -50px, 0px);
         opacity: 0;
-        animation-timing-function: linear;
+        animation-timing-function: ease-in-out;
       }
       100% {
         transform: translate3d(0px, 0px, 0px);
@@ -367,11 +368,379 @@
       }
     }
     #page1.gwd-play-animation .gwd-gen-1jmugwdanimation {
-      animation: 0.7s linear 12.7s 1 normal forwards running gwd-gen-1jmugwdanimation_gwd-keyframes;
+      animation: 0.5s linear 12.5s 1 normal forwards running gwd-gen-1jmugwdanimation_gwd-keyframes;
     }
     .gwd-image-185l {
       transform: translate3d(0px, -50px, 0px);
       opacity: 0;
+    }
+    .gwd-image-d6tj {
+      position: absolute;
+      width: 91px;
+      height: 35px;
+      left: 35px;
+      opacity: 0;
+      transform-style: preserve-3d;
+      transform: translate3d(0px, 0px, 0px);
+      top: 220px;
+    }
+    .gwd-image-xnf9 {
+      position: absolute;
+      width: 91px;
+      height: 32px;
+      left: 35px;
+      opacity: 0;
+      transform-style: preserve-3d;
+      transform: translate3d(0px, 0px, 0px);
+      top: 220px;
+    }
+    .gwd-image-ry0k {
+      position: absolute;
+      width: 91px;
+      height: 34px;
+      left: 35px;
+      opacity: 0;
+      transform-style: preserve-3d;
+      transform: translate3d(0px, 0px, 0px);
+      top: 220px;
+    }
+    .gwd-image-efb4 {
+      position: absolute;
+      width: 91px;
+      height: 26px;
+      left: 35px;
+      opacity: 0;
+      transform-style: preserve-3d;
+      transform: translate3d(0px, 0px, 0px);
+      top: 220px;
+    }
+    .gwd-image-17kk {
+      position: absolute;
+      width: 91px;
+      height: 28px;
+      left: 35px;
+      opacity: 0;
+      transform-style: preserve-3d;
+      transform: translate3d(0px, 0px, 0px);
+      top: 220px;
+    }
+    .gwd-image-b87i {
+      position: absolute;
+      width: 91px;
+      height: 30px;
+      left: 35px;
+      opacity: 0;
+      transform-style: preserve-3d;
+      transform: translate3d(0px, 0px, 0px);
+      top: 220px;
+    }
+    @keyframes gwd-gen-57q0gwdanimation_gwd-keyframes {
+      0% {
+        opacity: 0;
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      96.4286% {
+        opacity: 0;
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: ease-out;
+      }
+      100% {
+        opacity: 1;
+        transform: translate3d(0px, 10px, 0px);
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-57q0gwdanimation {
+      animation: 14s linear 0s 1 normal forwards running gwd-gen-57q0gwdanimation_gwd-keyframes;
+    }
+    @keyframes gwd-gen-1k87gwdanimation_gwd-keyframes {
+      0% {
+        opacity: 0;
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      96.4286% {
+        opacity: 0;
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: ease-out;
+      }
+      100% {
+        opacity: 1;
+        transform: translate3d(0px, 53px, 0px);
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-1k87gwdanimation {
+      animation: 14s linear 0s 1 normal forwards running gwd-gen-1k87gwdanimation_gwd-keyframes;
+    }
+    @keyframes gwd-gen-1amjgwdanimation_gwd-keyframes {
+      0% {
+        opacity: 0;
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      96.4286% {
+        opacity: 0;
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: ease-out;
+      }
+      100% {
+        opacity: 1;
+        transform: translate3d(0px, 88px, 0px);
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-1amjgwdanimation {
+      animation: 14s linear 0s 1 normal forwards running gwd-gen-1amjgwdanimation_gwd-keyframes;
+    }
+    @keyframes gwd-gen-chntgwdanimation_gwd-keyframes {
+      0% {
+        opacity: 0;
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      96.4286% {
+        opacity: 0;
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: ease-out;
+      }
+      100% {
+        opacity: 1;
+        transform: translate3d(0px, 122px, 0px);
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-chntgwdanimation {
+      animation: 14s linear 0s 1 normal forwards running gwd-gen-chntgwdanimation_gwd-keyframes;
+    }
+    @keyframes gwd-gen-yag7gwdanimation_gwd-keyframes {
+      0% {
+        opacity: 0;
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      96.4286% {
+        opacity: 0;
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: ease-out;
+      }
+      100% {
+        opacity: 1;
+        transform: translate3d(0px, 152px, 0px);
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-yag7gwdanimation {
+      animation: 14s linear 0s 1 normal forwards running gwd-gen-yag7gwdanimation_gwd-keyframes;
+    }
+    @keyframes gwd-gen-zbvmgwdanimation_gwd-keyframes {
+      0% {
+        opacity: 0;
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      96.4286% {
+        opacity: 0;
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: ease-out;
+      }
+      100% {
+        opacity: 1;
+        transform: translate3d(0px, 185px, 0px);
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-zbvmgwdanimation {
+      animation: 14s linear 0s 1 normal forwards running gwd-gen-zbvmgwdanimation_gwd-keyframes;
+    }
+    .gwd-image-h2c0 {
+      position: absolute;
+      width: 72px;
+      height: 28px;
+      left: 44px;
+      opacity: 0;
+      transform-style: preserve-3d;
+      transform: translate3d(0px, 0px, 0px);
+      top: 457px;
+    }
+    .gwd-image-vhaw {
+      position: absolute;
+      width: 39px;
+      height: 39px;
+      left: 61px;
+      top: 543px;
+      transform: translate3d(0px, 70px, 0px);
+      transform-style: preserve-3d;
+    }
+    .gwd-image-4lmm {
+      position: absolute;
+      width: 76px;
+      height: 15px;
+      left: 42px;
+      opacity: 0;
+      transform-style: preserve-3d;
+      transform: translate3d(0px, -15px, 0px);
+      top: 510px;
+    }
+    .gwd-image-hmm8 {
+      position: absolute;
+      width: 76px;
+      height: 11px;
+      left: 42px;
+      opacity: 0;
+      transform-style: preserve-3d;
+      transform: translate3d(80px, 0px, 0px);
+      top: 498px;
+    }
+    .gwd-image-2wrq {
+      position: absolute;
+      width: 31px;
+      height: 25px;
+      opacity: 0;
+      top: 550px;
+      left: 87px;
+    }
+    @keyframes gwd-gen-yrwsgwdanimation_gwd-keyframes {
+      0% {
+        opacity: 0;
+        transform: translate3d(80px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      96.875% {
+        opacity: 0;
+        transform: translate3d(80px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      100% {
+        opacity: 1;
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-yrwsgwdanimation {
+      animation: 16s linear 0s 1 normal forwards running gwd-gen-yrwsgwdanimation_gwd-keyframes;
+    }
+    @keyframes gwd-gen-3b11gwdanimation_gwd-keyframes {
+      0% {
+        opacity: 0;
+        transform: translate3d(0px, -15px, 0px);
+        animation-timing-function: linear;
+      }
+      97.006% {
+        opacity: 0;
+        transform: translate3d(0px, -15px, 0px);
+        animation-timing-function: linear;
+      }
+      100% {
+        opacity: 1;
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-3b11gwdanimation {
+      animation: 16.7s linear 0s 1 normal forwards running gwd-gen-3b11gwdanimation_gwd-keyframes;
+    }
+    @keyframes gwd-gen-13u7gwdanimation_gwd-keyframes {
+      0% {
+        opacity: 0;
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      96.6667% {
+        opacity: 0;
+        transform: translate3d(0px, -30px, 0px);
+        animation-timing-function: ease-out;
+      }
+      100% {
+        opacity: 1;
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-13u7gwdanimation {
+      animation: 15s linear 0s 1 normal forwards running gwd-gen-13u7gwdanimation_gwd-keyframes;
+    }
+    @keyframes gwd-gen-2a20gwdanimation_gwd-keyframes {
+      0% {
+        transform: translate3d(0px, 70px, 0px);
+        animation-timing-function: linear;
+      }
+      94.186% {
+        transform: translate3d(0px, 70px, 0px);
+        animation-timing-function: linear;
+      }
+      97.093% {
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      100% {
+        transform: translate3d(-27px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-2a20gwdanimation {
+      animation: 17.2s linear 0s 1 normal forwards running gwd-gen-2a20gwdanimation_gwd-keyframes;
+    }
+    .gwd-div-bqv3 {
+      position: absolute;
+      height: 25px;
+      top: 550px;
+      transform-style: preserve-3d;
+      width: 45px;
+      left: 75px;
+      opacity: 0;
+      border-style: solid;
+      border-image-source: none;
+      border-image-width: 1;
+      border-image-outset: 0;
+      border-image-repeat: stretch;
+      border-color: rgb(255, 255, 255);
+      border-width: 0px 1px 0px 0px;
+      transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1);
+      background-color: rgb(77, 97, 118);
+    }
+    @keyframes gwd-gen-10ldgwdanimation_gwd-keyframes {
+      0% {
+        transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1);
+        opacity: 0;
+        animation-timing-function: linear;
+      }
+      96.5116% {
+        transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1);
+        opacity: 0;
+        animation-timing-function: linear;
+      }
+      97.093% {
+        transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1);
+        opacity: 1;
+        animation-timing-function: linear;
+      }
+      100% {
+        transform: translate3d(-40px, 0px, 0px) scale3d(1, 0.75, 1);
+        opacity: 1;
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-10ldgwdanimation {
+      animation: 17.2s linear 0s 1 normal forwards running gwd-gen-10ldgwdanimation_gwd-keyframes;
+    }
+    @keyframes gwd-gen-11ergwdanimation_gwd-keyframes {
+      0% {
+        opacity: 0;
+        animation-timing-function: linear;
+      }
+      99.4048% {
+        opacity: 0;
+        animation-timing-function: linear;
+      }
+      100% {
+        opacity: 1;
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-11ergwdanimation {
+      animation: 16.8s linear 0s 1 normal forwards running gwd-gen-11ergwdanimation_gwd-keyframes;
     }
   </style>
   <script data-source="googbase_min.js" data-version="4" data-exports-type="googbase" src="googbase_min.js"></script>
@@ -406,6 +775,7 @@
 
 <body>
   <gwd-google-ad id="gwd-ad" polite-load="">
+    <gwd-metric-configuration></gwd-metric-configuration>
     <gwd-pagedeck class="gwd-page-container" id="pagedeck">
       <gwd-page id="page1" class="gwd-page-wrapper gwd-page-size gwd-lightbox" data-gwd-width="160px" data-gwd-height="600px" data-gwd-animation-labels="start,0">
         <div class="gwd-page-content gwd-page-size">
@@ -422,7 +792,19 @@
           <gwd-image id="header3d" source="assets/header3d.png" scaling="none" class="gwd-image-1tke gwd-gen-z9bugwdanimation"></gwd-image>
           <gwd-image id="header4" source="assets/header4.png" scaling="stretch" class="gwd-image-cu11 gwd-gen-1fsigwdanimation"></gwd-image>
           <gwd-image id="header4d" source="assets/header4d.png" scaling="none" class="gwd-image-1tke gwd-gen-11yggwdanimation"></gwd-image>
-          <div class="gwd-animation-event event-1-animation" data-event-name="event-1" data-event-time="15300"></div>
+          <gwd-image id="hashtag" source="assets/hashtag.png" scaling="stretch" class="gwd-image-h2c0 gwd-gen-13u7gwdanimation"></gwd-image>
+          <gwd-image id="text-6" source="assets/text-6.png" scaling="stretch" class="gwd-image-xnf9 gwd-gen-zbvmgwdanimation"></gwd-image>
+          <gwd-image id="text-5" source="assets/text-5.png" scaling="stretch" class="gwd-image-ry0k gwd-gen-yag7gwdanimation"></gwd-image>
+          <gwd-image id="text-4" source="assets/text-4.png" scaling="stretch" class="gwd-image-efb4 gwd-gen-chntgwdanimation"></gwd-image>
+          <gwd-image id="text-3" source="assets/text-3.png" scaling="stretch" class="gwd-image-17kk gwd-gen-1amjgwdanimation"></gwd-image>
+          <gwd-image id="text-2" source="assets/text-2.png" scaling="stretch" class="gwd-image-b87i gwd-gen-1k87gwdanimation"></gwd-image>
+          <gwd-image id="text-1" source="assets/text-1.png" scaling="stretch" class="gwd-image-d6tj gwd-gen-57q0gwdanimation"></gwd-image>
+          <gwd-image id="icons-2" source="assets/icons-2.png" scaling="stretch" class="gwd-image-4lmm gwd-gen-3b11gwdanimation"></gwd-image>
+          <gwd-image id="icons-1" source="assets/icons-1.png" scaling="stretch" class="gwd-image-hmm8 gwd-gen-yrwsgwdanimation"></gwd-image>
+          <gwd-image id="PIF-text" source="assets/PIF-text.png" scaling="stretch" class="gwd-image-2wrq gwd-gen-11ergwdanimation"></gwd-image>
+          <div class="gwd-div-bqv3 gwd-gen-10ldgwdanimation" id="PIF-line"></div>
+          <gwd-image id="PIF-logo" source="assets/PIF-logo.png" scaling="stretch" class="gwd-image-vhaw gwd-gen-2a20gwdanimation"></gwd-image>
+          <div class="gwd-animation-event event-1-animation" data-event-name="event-1" data-event-time="19000"></div>
         </div>
       </gwd-page>
     </gwd-pagedeck>
