--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
 
 
 
+    <div class="loading mt-2 mx-auto embed-responsive" style="width: 120px;height: 600px;">
+      <iframe src="./publish/120-600/index.html" class="embed-responsive-item" frameborder="0"></iframe>
+    </div>
+
+    <div class="loading mt-2 mx-auto embed-responsive" style="width: 160px;height: 600px;">
+      <iframe src="./publish/160-600/index.html" class="embed-responsive-item" frameborder="0"></iframe>
+    </div>
+
     <div class="loading mt-2 mx-auto embed-responsive" style="width: 200px;height: 200px;">
       <iframe src="./publish/200-200/index.html" class="embed-responsive-item" frameborder="0"></iframe>
     </div>
