--- a/zip/index.html
+++ b/zip/index.html
@@ -25,10 +25,10 @@
       <div class="card">
         <ul class="card-body nav flex-column text-center">
           <li class="nav-item">
-            <a class="nav-link disabled" href="./120-600.zip">120-600</a>
+            <a class="nav-link" href="./120-600.zip">120-600</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="./160-600.zip">160-600</a>
+            <a class="nav-link" href="./160-600.zip">160-600</a>
           </li>
         </ul>
       </div>
